--- a/client/style.css
+++ b/client/style.css
@@ -74,6 +74,10 @@ p {
   align-items: flex-start;
 }
 
+.message--chat-bot {
+  font-style: italic;
+}
+
 .message--self {
   align-items: flex-end;
 }
